# tightly_coupled_VLC_aided_visual_inertial_SLAM

./: README.md
config/: apriltag_dictionary.yaml  vins_rviz_config.rviz
config/1/: go_data.txt  ground_true.txt  pnp_data.txt  tag_num.txt
config/2/: go_data.txt  ground_true.txt  pnp_data.txt  tag_num.txt
config/mynteye/: ex_calib_result.yaml  my.txt  my.yaml  mynteye_config.yaml  vins_result.csv
config/mynteye/2led/: go_data.txt  ground_true.txt  pnp_data.txt  tag_num.txt
config/mynteye/3led/: go_data.txt  ground_true.txt  pnp_data.txt  tag_num.txt
config/mynteye/4led/: go_data.txt  ground_true.txt  pnp_data.txt  tag_num.txt
config/mynteye/complex/: go_data.txt  ground_true.txt  pnp_data.txt  tag_num.txt
config/mynteye/complex_moving/: go_data.txt  ground_true.txt  pnp_data.txt  tag_num.txt
tag_estimator/: CMakeLists.txt  package.xml  tag_estimator.kdev4
tag_estimator/.kdev4/: tag_estimator.kdev4
tag_estimator/src/: aprilTag.cpp  aprilTag.h  backup code  estimator.cpp  estimator.h  feature.h  frame.cpp  frame.h  parameters.cpp  parameters.h  point.cpp  point.h  tag_estimator_node.cpp  template.cpp
tag_estimator/src/factor/: const_point_factor.cpp  const_point_factor.h  imu_factor.h  initial_factor.h  integration_base.h  point_factor.cpp  point_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  reprojection_factor.cpp  reprojection_factor.h
tag_estimator/src/utility/: utility.h  visualization.cpp
tag_tracker/: CMakeLists.txt  package.xml  tag_tracker.kdev4
tag_tracker/.kdev4/: tag_tracker.kdev4
tag_tracker/launch/: tag_estimator.launch  tag_tracker.launch
tag_tracker/src/: FeatureTracker.cpp  FeatureTracker.h  apriltag_detector.cpp  apriltag_detector.h  apriltag_manager.cpp  apriltag_manager.h  feature.h  frame.cpp  frame.h  parameters.h  point.cpp  point.h  tag_detector.cpp  tag_detector.h  tag_tracker_node.cpp
